Cambiadas afirmaciones de la dimensión por intuiciones (#60)

--- a/memoria/preamble.sty
+++ b/memoria/preamble.sty
@@ -60,6 +60,7 @@
 \newcommand{\N}[0]{\mathbb{N}}
 \newcommand{\Z}[0]{\mathbb{Z}}
 \newcommand{\Q}[0]{\mathbb{Q}}
+\newcommand{\K}[0]{\mathbb{K}}
 
 
 \definecolor{background-blue}{rgb}{0.5,0.7,1.0}
